--- a/css/main.css
+++ b/css/main.css
@@ -1207,7 +1207,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #b82df1;
+  background: #ec4494;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
